--- a/First Year/Second Semester/Web Technologies/Labs/Lab1/librarie.html
+++ b/First Year/Second Semester/Web Technologies/Labs/Lab1/librarie.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
-<style>
-    table, th, td{
-        border: 1px solid black;
-    }
-    td{
-        padding: 5px;
-    }
-</style>
+
 <html lang="ro">
     <head>
         <title>Book Library</title>
+        <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/x-icon" href=".\Materials\resurse\book.ico"
     </head>
     <body>
-        <h1>Libraria Adi</h1>
+        <h1>Libraria Casian</h1>
         <img src="./Materials/resurse/mm.jpeg" width="100" height="auto">
         <h1>Bine ati venit!</h1>
         <p>
@@ -110,6 +104,34 @@
                 <img src="Materials\resurse\fundal.jpg" alt="hamburger" width="300" height="auto">
                 <figcaption>Bookshelf</figcaption>
             </figure>
+            <figure>
+                <img src="Materials/resurse/librarie1.png" alt="libarie" width="300" height="auto">
+                <figcaption>Librarie</figcaption>
+            </figure>
+            <figure>
+                <img src="Materials/resurse/psiho3.png" alt="libarie" width="300" height="auto">
+                <figcaption>Lise Bourbeau, Cele 5 rani</figcaption>
+            </figure>
+            <figure>
+                <img src="Materials/resurse/copii1.png" alt="libarie" width="300" height="auto">
+                <figcaption>Roald Dahl, Matilda</figcaption>
+            </figure>
+            <figure>
+                <img src="Materials/resurse/bele2.png" alt="libarie" width="300" height="auto">
+                <figcaption>Gabriel Garcia Marquez, Dragostea in vremea holerei</figcaption>
+            </figure>
+            <figure>
+                <img src="Materials/resurse/roald1.png" alt="libarie" width="300" height="auto">
+                <figcaption>Roald Dahl, Charlie si Fabrica de ciocolata</figcaption>
+            </figure>
         </section>
+        <section>
+            <address>
+                Ploiesti, Strada Marasesti, Nr. 286
+            </address>
+        </section>
+        <a href="#top">
+            <button>Inapoi Sus</button>
+        </a>
     </body>
 </html>
