--- a/First Year/Second Semester/Web Technologies/Labs/Lab1/librarie.html
+++ b/First Year/Second Semester/Web Technologies/Labs/Lab1/librarie.html
@@ -7,15 +7,15 @@
         <link rel="icon" type="image/x-icon" href=".\Materials\resurse\book.ico"
     </head>
     <body>
-        <h1>Libraria Casian</h1>
-        <img src="./Materials/resurse/mm.jpeg" width="100" height="auto">
+        <h1>Libraria <span id="italic">Casian</span></h1>
+        <img src="./Materials/resurse/mm.jpeg" width="100" height="auto" id="logo">
         <h1>Bine ati venit!</h1>
         <p>
             A construi o bibliotecă înseamnă a crea o viață. Biblioteca nu va fi niciodată o colecție
     întâmplătoare de cărți.
         </p>
         <h1>Noutati</h1>
-        <section>
+        <section class="ParagrafeNoutati">
             <h3>Marea Ciopârțeală</h3>
             <img src="./Materials/resurse/copii2.png" width="100" height="auto">
             <ul>
@@ -29,8 +29,6 @@
             <p>
                 Marea Ciopârțeală este un roman scris de Daniel Defoe, publicat pentru prima dată în 1719 și este adesea considerat primul roman scris vreodată în limba engleză. Cartea este o autobiografie de ficțiune a presupusului autor, al cărui nume este omonim cu cel al titlului romanului, descriind supraviețuirea și viața acestuia după naufragierea sa pe o insulă tropicală din largul coastei Venezuelei de astăzi, timp în care întâlnește locuitori nativi ai Americii, captivi și marinari răsculați, înainte de a fi salvat. Modul de prezentare al acestui roman se bazează pe prezentarea amănunțită, aproape documentară a vieții personajului, prezentând narațiunea pe baza unor "documente false", care conferă narațiunii un aspect real. 
             </p>
-        </section>
-        <section>
             <h3>Padurea Spanzuratilor</h3>
             <img src="./Materials/resurse/tolstoi2.png" width="100" height="auto">
             <ul>
