--- a/First Year/Second Semester/Web Technologies/Labs/Lab1/librarie.html
+++ b/First Year/Second Semester/Web Technologies/Labs/Lab1/librarie.html
@@ -97,13 +97,13 @@
                 </tr>
             </table>
         </section>
-        <section>
+        <section class="parent">
             <figure>
-                <img src="Materials\resurse\fundal.jpg" alt="hamburger" width="300" height="auto">
+                <img src="Materials\resurse\bele1.png" alt="hamburger" width="300" height="auto">
                 <figcaption>Bookshelf</figcaption>
             </figure>
             <figure>
-                <img src="Materials/resurse/librarie1.png" alt="libarie" width="300" height="auto">
+                <img src="Materials/resurse/bele3.png" alt="libarie" width="300" height="auto">
                 <figcaption>Librarie</figcaption>
             </figure>
             <figure>
