done dropdown menu

--- a/First Year/Second Semester/Web Technologies/Labs/Lab1/librarie.html
+++ b/First Year/Second Semester/Web Technologies/Labs/Lab1/librarie.html
@@ -7,6 +7,24 @@
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/x-icon" href=".\Materials\resurse\book.ico"
     </head>
+
+    <nav role="navigation">
+        <div id="menuToggle">
+            <input type="checkbox"/>
+
+            <span></span>
+            <span></span>
+            <span></span>
+
+            <ul id="menu">
+                <a href="#"><li>Home</li></a>
+                <a href="#"><li>About</li></a>
+                <a href="#"><li>Info</li></a>
+                <a href="#"><li>Contact</li></a>
+            </ul>
+        </div>
+    </nav>
+
     <body>
         <h1>Libraria <span id="italic">Casian</span></h1>
         <img src="./Materials/resurse/mm.jpeg" width="100" height="auto" id="logo">
