done first exercise

--- a/First Year/Second Semester/Web Technologies/Labs/Lab2/ex-css.html
+++ b/First Year/Second Semester/Web Technologies/Labs/Lab2/ex-css.html
@@ -1,5 +1,17 @@
 <html>
 <head>
+    <style>
+        p{
+            color: pink;
+        }
+
+        p{
+            color: gray;
+        }
+
+        /* OBS: css ia ultima proprietate */
+
+    </style>
 </head>
 <body>
 <h1>Titlu</h1>
