done first 2 exercises

--- a/First Year/Second Semester/Web Technologies/Labs/Lab5/layout.html
+++ b/First Year/Second Semester/Web Technologies/Labs/Lab5/layout.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
     <title>Librarie</title>
     <link href="layout.css" type="text/css" rel="stylesheet">
+    <script src="script.js" defer></script>
     </head>
     <body>
     <header>
