--- a/First Year/Second Semester/Web Technologies/Labs/Lab7/happy.html
+++ b/First Year/Second Semester/Web Technologies/Labs/Lab7/happy.html
@@ -12,7 +12,7 @@
 </h1>
     
     <section id="game">
-      <p>Scorul tau: <span id="scor">0</span</p>
+      <p>Scorul tau: <span id="scor">0</span></p>
       <div id="container">
         
       </div>
