done 11.1 first task

--- a/First Year/Second Semester/Web Technologies/Labs/Lab11/html/comanda.html
+++ b/First Year/Second Semester/Web Technologies/Labs/Lab11/html/comanda.html
@@ -10,7 +10,7 @@
 <body>
 
 
-<form id="testform" enctype="multipart/form-data">
+<form id="testform" method="post" enctype="multipart/form-data">
  
 <p> <label>Produs</label> <input type="text" name="nume"> </p>
 <p> <label>Pret</label><input type="text" name="pret"></p>
