--- a/First Year/Second Semester/Web Technologies/Labs/ColocviuTW/p1.html
+++ b/First Year/Second Semester/Web Technologies/Labs/ColocviuTW/p1.html
@@ -13,49 +13,61 @@
             width: 66vw;
             border: solid black 5px;
             display: grid;
-            grid-template-rows: repeat(9,1fr);
-            grid-template-columns: repeat(10,1fr);
+            /* grid-template-rows: repeat(9,1fr);
+            grid-template-columns: repeat(10,1fr); */
+            grid-template-areas: "a a a a"
+                                "b b c c"
+                                ". d d .";
         }
         .box div {
             border: green double 6px
         }
         #div1 {
-            grid-row-start: 1;
+            /* grid-row-start: 1;
             grid-row-end: 4;
             grid-column-start: 1;
-            grid-column-end: 11;
+            grid-column-end: 11; */
+            grid-area: a;
         }
         #div2 {
-            grid-row-start: 4;
+            /* grid-row-start: 4;
             grid-row-end: 7;
             grid-column-start: 1;
-            grid-column-end: 6;
+            grid-column-end: 6; */
+            grid-area: b;
         }
         #div3 {
-            grid-row-start: 4;
+            /* grid-row-start: 4;
             grid-row-end: 7;
             grid-column-start: 6;
-            grid-column-end: 11;
+            grid-column-end: 11; */
 
+            grid-area: c;
             animation: schimbare 3s infinite;
         }
+
+        #div4 {
+            /* grid-row-start: 7;
+            grid-row-end: 10;
+            grid-column-start: 3;
+            grid-column-end: 9; */
+            grid-area: d;
+        }
+
         @keyframes schimbare {
             0% {border-color: green;}
             50% {border-color: red;}
             100% {border-color: green;}
         }
-        #div4 {
-            grid-row-start: 7;
-            grid-row-end: 10;
-            grid-column-start: 3;
-            grid-column-end: 9;
-        }
 
         @media (max-width: 700px) and (min-width: 250px) {
             #div3,#div4 {
-                visibility: hidden;
+                display: none;
             }
-            #div1 {
+            .box {
+                grid-template-areas: "a b";
+            }
+            /* #div1 {
                 grid-row-start: 1;
                 grid-row-end: 10;
                 grid-column-start: 1;
@@ -66,7 +78,7 @@
                 grid-row-end: 10;
                 grid-column-start: 6;
                 grid-column-end: 11;
-            }
+            } */
         }
     </style>
 
